--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </html>
 
 <script>
-    var socket = io.connect('http://localhost:4200');
+    var socket = io.connect(window.location.protocol + "//" + window.location.host + "/");
     socket.on('connect', function(data) {
         socket.emit('join', 'Aguardando informações...');
     });
